gemini and login fix